--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,23 @@
+@article{Clowe2006,
+abstract = {We present new weak lensing observations of 1E0657-558 (z=0.296), a unique cluster merger, that enable a direct detection of dark matter, independent of assumptions regarding the nature of the gravitational force law. Due to the collision of two clusters, the dissipationless stellar component and the fluid-like X-ray emitting plasma are spatially segregated. By using both wide-field ground based images and HST/ACS images of the cluster cores, we create gravitational lensing maps which show that the gravitational potential does not trace the plasma distribution, the dominant baryonic mass component, but rather approximately traces the distribution of galaxies. An 8-sigma significance spatial offset of the center of the total mass from the center of the baryonic mass peaks cannot be explained with an alteration of the gravitational force law, and thus proves that the majority of the matter in the system is unseen.},
+archivePrefix = {arXiv},
+arxivId = {astro-ph/0608407},
+author = {Clowe, Douglas and Brada{\v{c}}, Maru{\v{s}}a and Gonzalez, Anthony H. and Markevitch, Maxim and Randall, Scott W. and Jones, Christine and Zaritsky, Dennis},
+doi = {10.1086/508162},
+eprint = {0608407},
+file = {:C$\backslash$:/Users/Ian/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/a1a8faa77b404e4c82d1678e670883b3ea972d72.pdf:pdf},
+isbn = {0004-637X},
+issn = {0004-637X},
+journal = {ApJ},
+month = {sep},
+number = {2},
+pages = {L109--L113},
+primaryClass = {astro-ph},
+title = {{A Direct Empirical Proof of the Existence of Dark Matter}},
+url = {http://arxiv.org/abs/astro-ph/0608407{\%}0Ahttp://dx.doi.org/10.1086/508162 http://stacks.iop.org/1538-4357/648/i=2/a=L109},
+volume = {648},
+year = {2006}
+}
 @article{Bartelmann1996,
 abstract = {Navarro, Frenk, $\backslash${\&} White have recently found numerically that the density profile of dark-matter halos can be described by a universal two-parameter function over a broad range of halo masses. The profile is singular, approaching the halo center with {\$}\backslashrho\backslashpropto r{\^{}}{\{}-1{\}}{\$}. It had been argued previously that radially distorted, gravitationally lensed images of background sources in galaxy clusters, so-called radial arcs, required a flat core in the cluster density profile. Such radial arcs have so far been detected in two galaxy clusters, in apparent contradiction with a singular density profile. I show here that the profile suggested by Navarro et al. can produce radial arcs despite its central singularity, and describe how the two parameters of the profile can be determined in clusters where radial and tangential arcs are observed. I then apply this analysis to the two clusters where radial arcs were detected. In both cases, the redshifts of the radial arcs are yet unknown, hence definitive conclusions on the profile parameters cannot yet be drawn. Numerically determined values for the parameters of cluster-sized halos can, however, be used to predict the range of the unknown arc redshifts, thus providing a direct observational test for the proposed density profile. A potential difficulty with the profile is that the radial magnification of tangential arcs is large, hence tangential arcs should be thick or their sources should be very thin in the radial direction.},
 archivePrefix = {arXiv},
