--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,22 @@
+@article{Frenk2012,
+abstract = {We review the current standard model for the evolution of cosmic structure, tracing its development over the last forty years and focusing specifically on the role played by numerical simulations and on aspects related to the nature of dark matter.},
+archivePrefix = {arXiv},
+arxivId = {1210.0544},
+author = {Frenk, C.S. and White, S.D.M.},
+doi = {10.1002/andp.201200212},
+eprint = {1210.0544},
+file = {:C$\backslash$:/Users/Ian/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/404c7b670565fde8e5028cdce77670899c7f7c58.pdf:pdf},
+issn = {00033804},
+journal = {Ann. Phys.},
+keywords = {Cosmic structure,Dark matter,Simulations},
+month = {oct},
+number = {9-10},
+pages = {507--534},
+title = {{Dark matter and cosmic structure}},
+url = {https://arxiv.org/ftp/arxiv/papers/1210/1210.0544.pdf http://doi.wiley.com/10.1002/andp.201200212},
+volume = {524},
+year = {2012}
+}
 @article{Clowe2006,
 abstract = {We present new weak lensing observations of 1E0657-558 (z=0.296), a unique cluster merger, that enable a direct detection of dark matter, independent of assumptions regarding the nature of the gravitational force law. Due to the collision of two clusters, the dissipationless stellar component and the fluid-like X-ray emitting plasma are spatially segregated. By using both wide-field ground based images and HST/ACS images of the cluster cores, we create gravitational lensing maps which show that the gravitational potential does not trace the plasma distribution, the dominant baryonic mass component, but rather approximately traces the distribution of galaxies. An 8-sigma significance spatial offset of the center of the total mass from the center of the baryonic mass peaks cannot be explained with an alteration of the gravitational force law, and thus proves that the majority of the matter in the system is unseen.},
 archivePrefix = {arXiv},
